# prosoftschool2022

./: .$serverDiag.drawio.dtmp  .gitignore  ClientServer.drawio  ConnectionChannel.drawio  Object.drawio  dms  serverDiag.drawio  taskQueue.drawio
devicemonitoringserver/: BaseEncoderExecutor.h  CMakeLists.txt  ComandCenter.cpp  ComandCenter.h  CommandCenter.cpp  CommandCenter.h  DZ_2.qbs  Makefile  MessageEncoder.cpp  MessageEncoder.h  MessageSerializer.cpp  MessageSerializer.h  MessageSerializerDev.cpp  MessageSerializerDev.h  MessageSerializerServ.cpp  MessageSerializerServ.h  cc  commandCenter.cpp  commandCenter.h  commandcenter.cpp  commandcenter.h  common.h  devicemock.cpp  devicemock.h  devicemockerrors.cpp  devicemockerrors.h  devicemonitoringserver.cpp  devicemonitoringserver.h  devicemonitoringserver.qbs  devicemonitoringservererrors.cpp  devicemonitoringservererrors.h  deviceworkschedule.cpp  deviceworkschedule.h  main.cpp  message.h  message.hxx  messageSerializator.cpp  messageSerializator.h  messagecommon.h  messageencoder.cpp  (+15 more)
devicemonitoringserver/clientservercomponents/: abstractmessage.h  baseencoderexecutor.h  commandcenter.cpp  commandcenter.h  messageencoder.cpp  messageencoder.h  messageserializer.cpp  messageserializer.h
devicemonitoringserver/clientservercomponents/message/: abstractmessage.h  commandmessage.cpp  commandmessage.h  errormessage.cpp  errormessage.h  meteragemessage.cpp  (+1 more)
devicemonitoringserver/commandcenter/: Makefile  commandcenter.cpp  commandcenter.cxx  commandcenter.h  commandcenter.hxx  commandcenter_test.cxx  commandcentertests.cpp  commandcentertests.h  devicestatistics.cpp  devicestatistics.h  devicestatisticstests.cpp  devicestatisticstests.h  phasestatistics.h
devicemonitoringserver/encoder/: BaseEncoderExecutor.h  Makefile  Mirror.cpp  Mirror.h  Multiply41.cpp  Multiply41.h  ROT3.cpp  ROT3.h  base_encoder.hxx  baseencoderexecutor.h  message_encoder.cxx  message_encoder.hxx  message_encoder_test.cxx  messageencoder.cpp  messageencoder.h  mirror.cpp  mirror.h  multiply41.cpp  multiply41.h  rot3.cpp  rot3.h  rot4.cpp  rot4.h  rotX.cpp  rotX.h
devicemonitoringserver/encoding/: BaseEncoderExecutor.h  Makefile  MessageEncoder.cpp  MessageEncoder.h  Mirror.cpp  Mirror.h  Multiply41.cpp  Multiply41.h  ROT3.cpp  ROT3.h  SingletonEncoder.cpp  SingletonEncoder.h  message_encoder.cxx  message_encoder.hxx  message_encoder_test.cxx  xor.cpp  xor.h
devicemonitoringserver/message/: message.cxx  message.h  message.hxx  messageserializer.cpp  messageserializer.h  messageserializertests.cpp  messageserializertests.h
devicemonitoringserver/messageencoder/: baseencoderexecutor.h  encoderexecutorstests.cpp  encoderexecutorstests.h  messageencoder.cpp  messageencoder.h  messageencodertests.cpp  messageencodertests.h  mirror.cpp  mirror.h  multiply41.cpp  multiply41.h  rot3.cpp  rot3.h
devicemonitoringserver/serialization/: Makefile  MessageSerializator.cpp  MessageSerializator.h  ser.cxx  ser.hxx  ser_test.cxx
devicemonitoringserver/server/: abstractconnection.h
devicemonitoringserver/servermock/: clientconnectionmock.cpp  clientconnectionmock.h  connectionchannel.cpp  connectionmock.cpp  connectionmock.h  connectionservermock.cpp  connectionservermock.h  servertests.cpp
devicemonitoringserver/unit_tests_functions/: testmessageencoderfunctions.cpp  testmessageencoderfunctions.h  unittestfunctions.cpp  unittestfunctions.h
devicemonitoringserver/unittest/: codealgorithm.cpp  commandcenter.cpp  deserialization.cpp  serialization.cpp  unittest.cpp  unittest.h
(+27 files in other folders)
